<?xml version="1.0"?>
<package>
  <name>dold_driver</name>
  <version>0.0.1</version>
  <description>A serial com driver with an Arduino ProMicro for the Dold Safety Switch buttons</description>
 
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>BSD</license>

  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>dold_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>dold_msgs</run_depend>

  <export>

  </export>
</package>
